fix grid gap

--- a/src/pages/Finder/style.scss
+++ b/src/pages/Finder/style.scss
@@ -183,10 +183,7 @@
 .finder-cards-wrapper{
     border-radius: 1em;
     padding: 1em 0px;
-
-    @media screen and (max-width: 768px){
-        padding-top: 0px !important;
-    }
+    padding-top: 0px !important;
 }
 
 .finder-cards-button-wrapper{
@@ -205,11 +202,8 @@
     justify-content: flex-start;
     gap: 12px;
     cursor: grab;
-
-    @media screen and (max-width: 768px){
-        padding: 18px 0px;
-        padding-bottom: 0px !important;
-    }
+    padding: 12px 0px;
+    padding-bottom: 0px !important;
 }
 
 /* Scrollbar */
