--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -361,11 +361,8 @@
     justify-content: flex-start;
     gap: 12px;
     cursor: grab;
-    
-    @media screen and (max-width: 768px){
-        padding: 18px 0px;
-        padding-bottom: 0px !important;
-    }
+    padding: 12px 0px;
+    padding-bottom: 0px !important;
 }
 
 /* Scrollbar */
